[package]
name = "rs_api_tester_se37like"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inquire = "0.6"
# Adicionamos a feature "cookies" aqui:
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
base64 = "0.21"
comfy-table = "7.1"
colored = "2.1"